# commonplace-daily-digest

./: .env.example  .gitignore  README.md  button.html  cron.py  index.py  md.py  pyproject.toml  readwise.py
example/: EXAMPLE_EMPTY.md  data.json  readwise.md
